appId: ${APP_ID}
name: Share Message
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-9

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.otherUser = output.utils.createUser()}
- evalScript: ${output.room = output.utils.createRandomRoom(output.user.username, output.user.password)}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

# Start a DM with other user
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: ${output.otherUser.username}
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'Hello user'
- runFlow: '../../helpers/go-back.yaml'

# should navigate to room and send a message
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: ${output.room.name}
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'Hello room'

# should open the action sheet and tap Forward
- extendedWaitUntil:
    visible:
      id: 'message-content-Hello room'
    timeout: 60000
- longPressOn:
    id: 'message-content-Hello room'
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'Forward'
    timeout: 60000
- tapOn: 'Forward'

# should forward the message
- extendedWaitUntil:
    visible:
      id: 'forward-message-view'
    timeout: 60000
- tapOn:
    id: 'select-person-or-channel'
- extendedWaitUntil:
    visible:
      id: 'multi-select-search'
    timeout: 60000
- tapOn:
    id: 'multi-select-search'
- inputText: ${output.otherUser.username}
- extendedWaitUntil:
    visible:
      id: multi-select-item-${output.otherUser.username.toLowerCase()}
    timeout: 60000
- tapOn:
    id: multi-select-item-${output.otherUser.username.toLowerCase()}
# this is to hide bottom sheet and keyboard together
- tapOn:
    point: 5%,10%
- extendedWaitUntil:
    notVisible:
      id: 'multi-select-search'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'forward-message-view-send'
      IOS_LABEL: 'Send'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room.name}

# should go to otherUser DM and verify if exist both messages
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: ${output.otherUser.username}
- extendedWaitUntil:
    visible:
      id: 'message-content-Hello user'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'Hello room'
    timeout: 60000
